# scenequeue

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  config.example.json  frontend.html  install.sh  pyproject.toml  server.py  start.sh
.github/workflows/: docker-publish.yml  test.yml
defaults/databases/appearances/: default.json  manga_demo.json
defaults/databases/poses/: default.json  manga_demo.json
defaults/databases/prompts/: default.json  manga_demo.json
defaults/databases/scenes/: default.json  manga_demo.json
defaults/databases/styles/: default.json  manga_demo.json
defaults/databases/subjects/: default.json  manga_demo.json
defaults/databases/wardrobes/: default.json  manga_demo.json
defaults/workflows/: upscale_api.json  workflow_api.json
llm/: prompt_guidelines.md
routes/: __init__.py  api.py
src/: __init__.py  core.py  enums.py  poller.py  workflows.py
static/: manifest.json  sw.js
static/css/: styles.css
static/js/: app.js
test/: test_api.py  test_resolver.py  test_workflows.py
