[project]
name = "scenequeue"
version = "0.1.0"
description = "Local storyboard and batch prompt orchestrator for ComfyUI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = "-q"
